2011-06-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R (Cspdiagprod, diagCspprod): fixup for symmetric
	sparse, and non constant-diagonal.

2011-05-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsCMatrix.R (determinant(<dsCMatrix>): fix for Matrix(0, 1) case.

2011-05-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (sparseMatrix): add 'symmetric' argument.

2011-04-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Csparse.c (Csparse_subassign): unfinished prototype

	* src/....: Finally no longer hack "UFlong := int", but rather
	* src/UFconfig/UFconfig.h: use standard CHOLMOD headers

	* DESCRIPTION (Version): 0.9996875-0

2011-03-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-49

2011-03-30  Douglas Bates <bates@stat.wisc.edu>

	* Matrix/src/chm_common.c: [r2658] Install symbols first -
	{preventing seg.fault under -gct}

2011-03-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-48
	*only* difference to CRAN released *-47, is the work around Sweave bug
	in inst/doc/sparseModels.Rnw.

2011-02-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/factorizations.c (LU_expand): now also works for non-square (m x n)
	* tests/factorizing.R: testing that

2011-02-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (t_geMatrix): drop 'factors', as they can be
	wrong.

2011-02-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (replTmat): fix bug for  M[i,j] <- v,
	when j had duplicated entries.
	* tests/indexing.R (chkAssign): new function; testing the above.

2011-02-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R, R/sparseVector.R, man/sparseVector-class.Rd: now
	require explicitly that i-slot must be sorted for sparseVectors.

2011-02-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (formatSparseM): align="right" accidentally did