@@ -381,3 +381,5 @@
   -> also in other (lme4a ?) cases where we may not yet know if we are
      talking about a dense or sparse cholesky factor.
 
+- base as.matrix() & as.array() are no longer hacked to be correctly S4
+  generic -- instead we provide a S3 method {yuck!}.
